--- a/AdvertApp/src/styles.scss
+++ b/AdvertApp/src/styles.scss
@@ -4,3 +4,8 @@ body {
   position: relative;
   margin-bottom: 60px;
 }
+
+.line-breaker {
+  white-space: pre-line;
+  text-align: left;
+}
